--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,30 @@
 [package]
 authors = ["David Michael Weis <dweis7@gmail.com>"]
+description = "A tool for logging MQTT messages to an mcap file"
 edition = "2021"
 license = "MIT OR APACHE"
 name = "mqtt-mcap-logger"
 publish = false
 readme = "README.md"
 repository = "https://github.com/dmweis/mqtt-mcap-logger"
-version = "0.1.0"
+version = "0.1.1"
+
+[package.metadata.deb]
+assets = [
+  [
+    "target/release/mqtt-mcap-logger",
+    "/usr/bin/",
+    "755",
+  ],
+  [
+    "configuration/settings.yaml",
+    "/etc/mqtt-mcap-logger/settings.yaml",
+    "644",
+  ],
+]
+conf-files = ["/etc/mqtt-mcap-logger/settings.yaml"]
+maintainer = "David Weis <dweis7@gmail.com>"
+maintainer-scripts = "debian/"
 
 [dependencies]
 mcap = "0.6.0"
@@ -19,9 +37,19 @@ tokio = {version = "1", features = ["full"]}
 
 # utils
 clap = {version = "4.1.1", features = ["derive"]}
+config = "0.13"
 jsonschema = "0.17.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+
+# logging
+tracing = {version = "0.1", features = ["log"]}
+tracing-logfmt = "0.3"
+tracing-subscriber = {version = "0.3", features = [
+  "registry",
+  "env-filter",
+  "json",
+]}
 
 # error handling
 anyhow = "1.0"
