--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ name = "mqtt-mcap-logger"
 publish = false
 readme = "README.md"
 repository = "https://github.com/dmweis/mqtt-mcap-logger"
-version = "0.1.1"
+version = "0.1.2"
 
 [package.metadata.deb]
 assets = [
@@ -25,6 +25,8 @@ assets = [
 conf-files = ["/etc/mqtt-mcap-logger/settings.yaml"]
 maintainer = "David Weis <dweis7@gmail.com>"
 maintainer-scripts = "debian/"
+
+[package.metadata.deb.systemd-units]
 
 [dependencies]
 mcap = "0.6.0"
