--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ name = "mqtt-mcap-logger"
 publish = false
 readme = "README.md"
 repository = "https://github.com/dmweis/mqtt-mcap-logger"
-version = "0.1.7"
+version = "0.1.8"
 
 [package.metadata.deb]
 assets = [
@@ -38,6 +38,7 @@ rumqttc = "0.20.0"
 tokio = {version = "1", features = ["full"]}
 
 # utils
+chrono = "0.4"
 clap = {version = "4.1.1", features = ["derive"]}
 config = "0.13"
 jsonschema = "0.17.0"
